--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self'; img-src *; "/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Gideon+Roman&family=Lora:ital,wght@1,600&family=Playfair+Display&display=swap" rel="stylesheet">
 
